Reorganized the project and added properly javadocs.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Petrofacies Framework
+application.title=Interop-BDI
 application.vendor=Luan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=petrofacies.framework.PetrofaciesFramework
+javafx.main.class=interop.framework.InteropFramework
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
